footer whitespace fix hopefully

--- a/ui/src/styles/_global.scss
+++ b/ui/src/styles/_global.scss
@@ -28,6 +28,9 @@ body {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   // padding-top: var(--headerHeight);
   overflow: hidden;
 }
